<resources>
    <string name="app_name">Midterm Project Group 6</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcome">Welcome</string>
    <string name="app_title">LafHood</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="weekly_meal_planner">Weekly Meal Planner</string>
    <string name="intro_register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="already_registered">Already registered ?</string>
    <string name="sign_in2">Sign In</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="user_sample">Nizyl_Cutie</string>
    <string name="email_sample">nizylcutie@gmail.com</string>
    <string name="log_out">Log Out</string>
    <string name="search_your_food">Search your Food!</string>
    <string name="hello_user">Hello Nizyl_Cutie</string>
    <string name="breakfast">Breakfast</string>
    <string name="product_name">Product Name</string>
    <string name="start_rating">5.0</string>
    <string name="min_45">Min - $45</string>
    <string name="dinner">Dinner</string>
    <string name="description">Description</string>
    <string name="_10_weekend_delicious_n_dinner_recipes">10 weekend Delicious \n Dinner Recipes</string>
    <string name="view_more">View more</string>
    <string name="your_favorite_and_tasty_food_is_here">your favorite and tasty food is here!</string>
    <string name="first_fragment">First Fragment</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="description_here">Description Here</string>
    <string name="food_name">Food Name</string>
    <string name="my_calendar">My Calendar</string>
    <string name="week_meal_plan">Week Meal Plan</string>
    <string name="week_meal_plan_header">Week Meal Plan</string>
    <string name="_45">45</string>
    <string name="add_to_plan">Add To Plan</string>
    <string name="_100">100</string>
    <string name="_10_00_7_00">10:00 - 7:00</string>
    <string name="_5_0">5.0</string>
    <string name="name">Name</string>
    <string name="add_to_the_week_meal_plan">Add to the Week Meal Plan</string>
</resources>